[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "filter-coffee-process-simulator"
version = "0.1.0"
description = "Manuscript reproduction code for a mass-conserving filter coffee process simulator"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["v60_physics"]
